# rock-paper-scissors

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main.qml  mqttbasic.cpp  mqttbasic.h  qml.qrc  rerefons.cpp  rerefons.h
